--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -9,13 +9,13 @@
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">       
-          {%if is_edit%}Редактировать пост {%else%}Новый пост{%endif%}         
+        <div class="card-header">
+          {%if is_edit%}Редактировать пост {%else%}Новый пост{%endif%}
         </div>
         <div class="card-body">
           {% if form.errors %}
             {% for field in form %}
-              {% for error in field.errors %}            
+              {% for error in field.errors %}
                 <div class="alert alert-danger">
                   {{ error|escape }}
                 </div>
@@ -26,13 +26,16 @@
               {{ error|escape }}
             </div>
           {% endfor %}
-          {% endif %}  
-          <form method="post" enctype="multipart/form-data">
+          {% endif %}
+          {%if is_edit%}<form method="post"
+            action="{% url 'posts:post_edit' post.id %}">
+          {%else%}<form method="post"
+            action="{% url 'posts:post_create' %}">{%endif%}
           {% csrf_token %}
-          {% for field in form %}         
+          {% for field in form %}
             <div class="form-group row my-3 p-3">
               <label for="{{ field.id_for_label }}" >
-                {{ field.label }}  
+                {{ field.label }}
                 {% if field.field.required %}
                   <span class="required text-danger">*</span>
                 {% endif %}
@@ -51,7 +54,7 @@
                   Добавить
                 {% else %}
                   Сохранить
-                {% endif %} 
+                {% endif %}
                 </button>
               </div>
             </form>
@@ -59,4 +62,4 @@
         </div>
       </div>
     </div>
-  {% endblock%} 
+  {% endblock%}
