--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}{{ group.title }}{% endblock %} 
-{% block header %}{{ group.title }}{% endblock %} 
+{% block header %}{% endblock %} 
 {% block content %}
+  <h1>{{ group.title }}</h1>
   <p>{{ group.description }}</p>
 {% for post in page_obj %}
 <article>
@@ -11,5 +12,3 @@
 {% endfor %}
 {% include 'posts/includes/paginator.html' %}
 {% endblock%}
-           
-
