--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -8,13 +8,13 @@
           Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались</div>
           <div class="card-body">
             <div class="card-body"> 
-                <form method="post" action="{% url 'password_change' %}">
+                <form method="post" action="{% url 'users:password_change_form' %}">
                   <input type="hidden" name="csrfmiddlewaretoken" value="">
                   <div class="form-group row my-3 p-3">
                     <label for="id_email">
                       Адрес электронной почты
                       <span class="required text-danger">*</span>
-                    </label>    
+                    </label>
                     <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
                   </div>
                   <div class="col-md-6 offset-md-4">
